--------------------------------------------------------------------------------
w17 30.11.2021 18:00:17 +0300 - build 322

1. 7z.dll 21.06

w17 11.11.2021 15:00:32 +0300 - build 321

1. 7z.dll 21.04

w17 15.09.2021 18:51:03 +0100 - build 320

1. 0003896: ArcLite:PE opens as Base64.

w17 28.07.2021 15:38:31 +0300 - build 319

1. 7z.dll обновлена до версии 21.03

w17 06.05.2021 17:37:40 +0300 - build 318

1. 7z.dll обновлена до версии 21.02

w17 29.12.2020 17:07:37 +0300 - build 317

1. Не находилась 7z.dll на x86 если в Modulepath были '/'

w17 12.12.2020 02:33:14 +0300 - build 316

1. Не сбрасывался пароль создаваемого архива, несмотря на отключение шифрования, при сохраненном пароле.
   https://forum.farmanager.com/viewtopic.php?p=163225#p163225

drkns 14.11.2020 23:54:39 +0000 - build 315

1. Fix "Retry" button in error dialogs.

drkns 17.08.2020 19:45:45 +0100 - build 314

1. gh-263: Use ArcLite for .aab by default

drkns 04.07.2020 12:52:29 +0100 - build 313

1. gh-250: Use ArcLite for .apk and .aar by default

w17 03.11.2019 11:05:08 +0300 - build 312

1. M#3750

drkns 19.09.2019 22:01:49 +0100 - build 311

1. "using namespace std" - зло.

drkns 18.08.2019 10:49:12 +0100 - build 310

1. Иногда плагин пытался пропихивать posix attributes в SetFileAttributes.
   Иногда это даже получалось.

w17 27.06.2019 16:27:51 +0300 - build 309

1. M#3719: arclite: не меняется кейс имени файла при извлечении из архива

w17 10.06.2019 16:15:35 +0300 - build 308

1. Неправильно работал выбор метода сжатия после сохранения настроек.

zg 04.06.2019 11:52:46 +0300 - build 307

1. 0003713: Несогласованность panel.GetPanelDirectory и panel.SetPanelDirectory.

w17 16.05.2019 12:31:19 +0300 - build 306

1. Продолжение b296

w17 13.05.2019 12:39:28 +0300 - build 305

1. Продолжение b303 (Shift+F3)

w17 10.05.2019 01:49:46 +0300 - build 304

1. Уточнение b303 (показываем предупреждения, если есть)

w17 07.05.2019 16:34:38 +0300 - build 303
